--- a/_site.yaml
+++ b/_site.yaml
@@ -1,7 +1,7 @@
 name: "Yay internet!"
 output_dir: "."
 navbar:
-  title: "Home"
+  title: "Home Page"
   right:
     - text: "About"
       href: about.html
