--- a/_site.yaml
+++ b/_site.yaml
@@ -1,14 +1,14 @@
 name: "Yay internet!"
 output_dir: "."
 navbar:
-  title: "Home Page"
+  title: "Home"
   right:
     - text: "About"
       href: about.html
     - icon: fa-envelope fa-lg
-      href: mailto:<unp2000@cumc.columbia.edu
+      href: mailto:<unp2000@cumc.columbia.edu>
     - icon: fa-github fa-lg
-      href: http://github.com/unp2000
+      href: http://github.com/unp2000/
 output:
   html_document:
     theme: cerulean
