--- a/_site.yml
+++ b/_site.yml
@@ -6,9 +6,11 @@ navbar:
     - text: "About"
       href: about.html
     - icon: fa-envelope fa-lg
-      href: mailto:<you@youremail.com>
+      href: mailto:<unp2000@cumc.columbia.edu>
     - icon: fa-github fa-lg
-      href: http://github.com/<YOUR_GH_NAME>/
+      href: http://github.com/unp2000/
+    - icon: fab fa-linkedin
+      href: https://www.linkedin.com/in/uma-palaniappan/
 output:
   html_document:
     theme: cerulean
