--- a/_site.yml
+++ b/_site.yml
@@ -5,8 +5,8 @@ navbar:
   right:
     - text: "About"
       href: aboutme.html
-    - text: "Plotly"
-      href: plotly.html
+    - text: "Dashboard"
+      href: dashboard.html
     - icon: fa-envelope fa-lg
       href: mailto:<unp2000@cumc.columbia.edu>
     - icon: fa-github fa-lg
